// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`explorer OPEN_EXPLORER 1`] = `
{
  "currentPageId": 1,
  "depth": 0,
}
`;

exports[`explorer POP_PAGE 1`] = `
{
  "currentPageId": null,
  "depth": 0,
}
`;

exports[`explorer PUSH_PAGE 1`] = `
{
  "currentPageId": null,
  "depth": 0,
}
`;
